--- a/html/login.html
+++ b/html/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/login.css" />
-    <title>로그인 메인</title>
+    <title>로그인</title>
   </head>
   <body>
     <div class="login_header">
@@ -22,6 +22,9 @@
       <div class="pw_content">
         <p>비밀번호</p>
         <input id="pw_input" type="password" placeholder="비밀번호" />
+      </div>
+      <div class="login_error">
+        <p>아이디/비밀번호를 확인해주세요</p>
       </div>
       <div class="wrap_login_button">
         <button id="email_login_button">
