--- a/html/chat.html
+++ b/html/chat.html
@@ -18,8 +18,10 @@
 </head>
 
 <body>
-
     <nav class="nav_bar">
+        <div class="back_btn">
+            <a href="#"><img src="../img/arrow.png" alt=""></a>
+        </div>
         <div class="logo_btn">
             <a href="#"><img src="../img/logo.png" alt="" class="logo_img"></a>
         </div>
@@ -34,7 +36,7 @@
         </div>
         <div class="nav_mypage">
             <img src="../img/mypage.png" alt="">
-            <a href="#">마이페이지</a>
+            <a href="../html/mypage.html">마이페이지</a>
         </div>
 
     </nav>
@@ -73,7 +75,7 @@
                                 <a href="#" class="elim_btn">
                                    삭제하기
                                 </a>
-                                <a href="" class="report_btn">
+                                <a href="#" class="report_btn">
                                     신고하기
                                 </a>
                             </div>
@@ -117,17 +119,37 @@
                             </div>
                         </div>
                     </div>
-                    <div class="chat_area"></div>
+                    <div class="chat_area">
+                        <div class="other_chat">
+                            <p>어쩌구 저쩌구 이건 말풍선 안에 들어갈 채팅 내용 동해물과 백두산이 마르고 닳도록....</p>
+                        </div>
+                        <div class="my_chat">
+                            <p>하느님이 보우하사 우리나라 만세... 무궁화 삼천리</p>
+                        </div>
+                        <div class="other_chat">
+                            <p>화려강산 대한사람 대한으로</p>
+                        </div>
+                        <div class="my_chat">
+                            <p>길이 보전하세...</p>
+                        </div>
+                        <div class="other_chat">
+                            <p>당근이세요?</p>
+                        </div>
+                        <div class="my_chat">
+                            <p>사람인데요...</p>
+                        </div>
+                    </div>
                     <div class="input_area">
                         <div class="input_chat">
-                            <input type="text" class="text_content">
+                            <input type="text" class="text_content" placeholder="채팅 내용을 입력해주세요">
                         </div>
                         <div class="chat_func">
                             <div class="wrap_send">
                                 <img src="../img/plus_btn.png" alt="">
                                 <img src="../img/emoticon_btn.png" alt="">
                                 <div class="wrap_number">
-                                    <p class="char_num">0/100</p>
+                                    <p>0</p>
+                                    <p class="char_num">/100</p>
                                 </div>
                             </div>
                             <div class="wrap_send_btn"><button class="send_btn">보내기</button></div>
@@ -137,6 +159,9 @@
             </div>
         </div>
     </section>
+
+    <!-- js -->
+    <script src="../js/chat.js"></script>
 
 </body>
 
