--- a/html/base.html
+++ b/html/base.html
@@ -20,6 +20,9 @@
 <body>
 
     <nav class="nav_bar">
+        <div class="back_btn">
+            <a href="#"><img src="../img/arrow.png" alt=""></a>
+        </div>
         <div class="logo_btn">
             <a href="#"><img src="../img/logo.png" alt="" class="logo_img"></a>
         </div>
