아이디, 비밀번호 찾기 관련 페이지

--- a/html/findID.html
+++ b/html/findID.html
@@ -19,7 +19,7 @@
     <div class="bottom_findID_header">
       <img src="../img/logo.png" />
       <div class="findID_header_box">
-        <a href="#" id="findID_pwbox">비밀번호 찾기</a>
+        <a href="./findPW.html" id="findID_pwbox">비밀번호 찾기</a>
         <div><a href="#" id="findID_IDbox">아이디 찾기</a></div>
       </div>
     </div>
