--- a/html/homeLogin.html
+++ b/html/homeLogin.html
@@ -20,7 +20,7 @@
 
     <div class="home_header">
       <a href="#">손에, 손잡고</a>
-      <img src="../img/home_header.jpg" alt="home_header" />
+      <img src="../img/logo.png" alt="logo" />
     </div>
     <div class="bottom_home_header">
       <div class="left_header">
