--- a/html/login.html
+++ b/html/login.html
@@ -15,16 +15,18 @@
       <img src="../img/arrow.png" />
     </a>
     <div class="wrap_login_content">
-      <div class="id_content">
-        <p>아이디</p>
-        <input id="id_input" type="text" placeholder="이메일" />
-      </div>
-      <div class="pw_content">
-        <p>비밀번호</p>
-        <input id="pw_input" type="password" placeholder="비밀번호" />
-      </div>
-      <div class="login_error">
-        <p>아이디/비밀번호를 확인해주세요</p>
+      <div class="login_content">
+        <div class="id_content">
+          <p>아이디</p>
+          <input id="id_input" type="text" placeholder="이메일" />
+        </div>
+        <div class="pw_content">
+          <p>비밀번호</p>
+          <input id="pw_input" type="password" placeholder="비밀번호" />
+        </div>
+        <div class="login_error">
+          <p>아이디/비밀번호를 확인해주세요</p>
+        </div>
       </div>
       <div class="wrap_login_button">
         <button id="email_login_button">
@@ -34,14 +36,14 @@
           <div>
             <img src="../img/google.png" />
             <a href="#">구글 아이디로 로그인</a>
+            <div></div>
           </div>
         </button>
       </div>
-
       <div class="login_footer">
-        <a href="#">회원가입 </a>
-        <a href="#">| </a>
-        <a href="#">이메일/비밀번호 찾기</a>
+        <a href="./signup.html">회원가입&nbsp; </a>
+        <a href="#">|&nbsp; </a>
+        <a href="./findID.html">이메일/비밀번호 찾기</a>
       </div>
     </div>
   </body>
