--- a/html/homeLogout.html
+++ b/html/homeLogout.html
@@ -9,7 +9,7 @@
   <body>
     <div class="home_header">
       <a href="#">손에, 손잡고</a>
-      <img src="../img/home_header.jpg" alt="home_header" />
+      <img src="../img/logo.png" alt="logo" />
     </div>
     <div class="bottom_home_header">
       <p>
