--- a/html/findID.html
+++ b/html/findID.html
@@ -17,7 +17,10 @@
     </div>
     <hr />
     <div class="bottom_findID_header">
-      <img src="../img/logo.png" />
+      <a href="./homeLogout.html">
+        <img src="../img/logo.png" />
+      </a>
+
       <div class="findID_header_box">
         <a href="./findPW.html" id="findID_pwbox">비밀번호 찾기</a>
         <div><a href="#" id="findID_IDbox">아이디 찾기</a></div>
