--- a/html/homeLogout.html
+++ b/html/homeLogout.html
@@ -19,12 +19,12 @@
       <a href="./login.html"><button id="login_button">로그인하기</button></a>
     </div>
     <div class="wrap_home_content">
-      <a href="#" id="left_rectangle">
+      <a href="./login.html" id="left_rectangle">
         <img src="../img/request.png" alt="request" />
         <p>도움 요청하기</p>
       </a>
 
-      <a href="#" id="right_rectangle">
+      <a href="./login.html" id="right_rectangle">
         <img src="../img/solve.png" alt="solve" />
         <p>도움 해결하기</p>
       </a>
