--- a/html/login.html
+++ b/html/login.html
@@ -8,9 +8,12 @@
   </head>
   <body>
     <div class="login_header">
-      <img src="../img/logo.png" />
+      <a href="./homeLogout.html">
+        <img src="../img/logo.png" />
+      </a>
       <p>로그인</p>
     </div>
+
     <a href="./homeLogout.html" id="bottom_header">
       <img src="../img/arrow.png" />
     </a>
