--- a/html/requestList.html
+++ b/html/requestList.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/request.css" />
-    <title>도움 요청페이지</title>
+    <link rel="stylesheet" href="../css/requestList.css" />
+    <title>도움 요청페이지 목록</title>
   </head>
   <body>
     <nav class="nav_bar">
