--- a/html/homeLogin.html
+++ b/html/homeLogin.html
@@ -10,7 +10,7 @@
     <div class="nav_bar">
       <div class="nav_logout">
         <img src="../img/logout.png" />
-        <a href="#">로그아웃</a>
+        <a href="./homeLogout.html">로그아웃</a>
       </div>
       <div class="nav_mypage">
         <img src="../img/mypage.png" />
@@ -38,12 +38,12 @@
       </div>
     </div>
     <div class="wrap_home_content">
-      <a href="#" id="left_rectangle_2">
+      <a href="./request.html" id="left_rectangle_2">
         <img src="../img/request.png" alt="request" />
         <p>도움 요청하기</p>
       </a>
 
-      <a href="#" id="right_rectangle_2">
+      <a href="./solve.html" id="right_rectangle_2">
         <img src="../img/solve.png" alt="solve" />
         <p>도움 해결하기</p>
       </a>
