--- a/html/home_login.html
+++ b/html/home_login.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/homeLogin.css" />
+    <link rel="stylesheet" href="../css/home_login.css" />
     <title>메인페이지(로그인o)</title>
   </head>
   <body>
     <div class="nav_bar">
       <div class="nav_logout">
         <img src="../img/logout.png" />
-        <a href="./homeLogout.html">로그아웃</a>
+        <a href="./home_logout.html">로그아웃</a>
       </div>
       <div class="nav_mypage">
         <img src="../img/mypage.png" />
