--- a/html/request_change.html
+++ b/html/request_change.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/requestList.css" />
-    <title>도움 요청페이지 목록</title>
+    <link rel="stylesheet" href="../css/request_change.css" />
+    <title>도움 수정페이지</title>
   </head>
   <body>
     <nav class="nav_bar">
       <div class="back_btn">
-        <a href="./homeLogin.html"><img src="../img/arrow.png" alt="" /></a>
+        <a href="./home_login.html"><img src="../img/arrow.png" alt="" /></a>
       </div>
       <div class="logo_btn">
-        <a href="./homeLogin.html"
+        <a href="./home_login.html"
           ><img src="../img/logo_2.png" alt="" class="logo_img"
         /></a>
       </div>
@@ -31,7 +31,7 @@
       </div>
       <div class="nav_logout">
         <img src="../img/logout.png" alt="" />
-        <a href="./homeLogout.html">로그아웃</a>
+        <a href="./home_logout.html">로그아웃</a>
       </div>
       <div class="nav_mypage">
         <img src="../img/mypage.png" alt="" />
@@ -41,7 +41,7 @@
     <hr />
     <div class="wrap_request">
       <div class="request_header">
-        <a href="#" id="request_box">도움 요청하기</a>
+        <a href="#" id="request_box2">도움 요청하기</a>
         <div class="region_name">
           <img src="../img/pin.png" />
           <a href="#">지역이름</a>
@@ -51,22 +51,19 @@
       <div class="request_container">
         <div class="title_container">
           <p>제목</p>
-          <input type="text" placeholder="제목을 입력해주세요" />
+          <input type="text" />
         </div>
         <div class="content_container">
           <p>요청 내용</p>
-          <input
-            type="text"
-            placeholder="도움을 요청할 내용에 대해 자세히 작성해주세요"
-          />
+          <input type="text" />
         </div>
         <div class="point_container">
           <p>거래 포인트</p>
-          <input type="text" placeholder="0" />
+          <input type="text" />
         </div>
       </div>
-      <div class="request_button">
-        <a href="#"><button id="request_button">도움 요청하기</button></a>
+      <div class="change_button">
+        <a href="#"><button id="change_button">수정하기</button></a>
       </div>
     </div>
   </body>
