--- a/html/request.html
+++ b/html/request.html
@@ -9,10 +9,10 @@
   <body>
     <nav class="nav_bar">
       <div class="back_btn">
-        <a href="./homeLogin.html"><img src="../img/arrow.png" alt="" /></a>
+        <a href="./home_login.html"><img src="../img/arrow.png" alt="" /></a>
       </div>
       <div class="logo_btn">
-        <a href="./homeLogin.html"
+        <a href="./home_login.html"
           ><img src="../img/logo_2.png" alt="" class="logo_img"
         /></a>
       </div>
@@ -22,7 +22,7 @@
             <a href="./request.html" class="help_req_a">도움 요청하기</a>
           </li>
           <li class="help_sol_btn">
-            <a href="./solve.html" class="help_sol_a">도움 해결하기</a>
+            <a href="./request_list.html" class="help_sol_a">도움 해결하기</a>
           </li>
         </ul>
       </div>
@@ -31,7 +31,7 @@
       </div>
       <div class="nav_logout">
         <img src="../img/logout.png" alt="" />
-        <a href="./homeLogout.html">로그아웃</a>
+        <a href="./home_logout.html">로그아웃</a>
       </div>
       <div class="nav_mypage">
         <img src="../img/mypage.png" alt="" />
