--- a/html/signup.html
+++ b/html/signup.html
@@ -17,7 +17,7 @@
     </div>
     <hr />
     <div class="bottom_signup_header">
-      <a href="./homeLogout.html"><img src="../img/logo.png" /></a>
+      <a href="./home_logout.html"><img src="../img/logo.png" /></a>
     </div>
     <div class="wrap_signup_content">
         <div class="signup_content">
