--- a/html/chat.html
+++ b/html/chat.html
@@ -31,7 +31,7 @@
                     채팅
                 </li>
                 <li class="opacity_li">
-                    도움 해결하기
+                    도움 해결하　　　　　기
                 </li>
             </ul>
         </div>
@@ -96,7 +96,7 @@
                             <p class="post_name">게시물 제목
                             </p>
                             <div class="point">
-                                <img src="../img/logo.png" alt="">
+                                <img src="../img/stamp.png" alt="">
                                 <p>:</p>
                                 <p>400</p>
                             </div>
