modify, pw_change 화면

--- a/html/modify.html
+++ b/html/modify.html
@@ -39,7 +39,47 @@
     <hr />
 
     <section class="container">
-
+        <div class="wrap_content">
+            <div class="wrap_img">
+                <img src="" alt="프로필 사진">
+                <button>사진 변경하기</button>
+            </div>
+            <div class="wrap_infor">
+                <div class="id">
+                    <p>아이디: </p>
+                    <p>hellosy76@naver.com</p>
+                </div>
+                <div class="pw">
+                    <p>비밀번호: </p>
+                    <p>*********</p>
+                    <button>변경하기</button>
+                </div>
+                <div class="name">
+                    <p>이름: </p>
+                    <p>박세영</p>
+                </div>
+                <div class="birth">
+                    <p>생년월일</p>
+                    <p>20000706</p>
+                </div>
+            </div>
+            <div class="wrap_change">
+                <div class="wrap_nick">
+                    <p>닉네임</p>
+                    <input type="text" placeholder="닉네임">
+                    <button>중복확인</button>
+                </div>
+                <div class="wrap_add">
+                    <p>주소</p>
+                    <input type="text" placeholder="주소">
+                    <button>주소입력</button>
+                </div>
+            </div>
+            <div class="wrap_btn">
+                <button class="mod_btn">개인정보 수정하기</button>
+                <button class="withdraw_btn">계정 탈퇴하기</button>
+            </div>
+        </div>
     </section>
 </body>
 
