--- a/html/pw_change.html
+++ b/html/pw_change.html
@@ -39,7 +39,28 @@
     <hr />
 
     <section class="container">
-
+        <div class="wrap_content">
+            <div class="wrap_img">
+                <img src="../img/logo.png" alt="">
+            </div>
+            <div class="wrap_change">
+                <div class="wrap_present">
+                    <p>현재 비밀번호</p>
+                    <input type="text" placeholder="비밀번호">
+                </div>
+                <div class="wrap_new">
+                    <p>새로운 비밀번호</p>
+                    <input type="text" placeholder="비밀번호">
+                </div>
+                <div class="wrap_newCheck">
+                    <p>새로운 비밀번호 확인</p>
+                    <input type="text" placeholder="비밀번호">
+                </div>
+            </div>
+            <div class="wrap_btn">
+                <button class="mod_btn">비밀번호 재설정하기</button>
+            </div>
+        </div>
     </section>
 </body>
 
