--- a/html/signup.html
+++ b/html/signup.html
@@ -25,8 +25,16 @@
               <p>아이디</p>
               <div class="bottom_id_content">
                 <input id="email_input" type="text" placeholder="이메일" />
-                <button>중복확인</button>
+                <button id="email_check_button">중복확인</button>
+                
               </div>
+              <div class="check_message">
+                <p id="email_check_message">중복 확인이 완료되었습니다. 인증을 완료해주세요.</p>
+              </div>
+            </div>
+            <div class="certifiednum_content">
+              <p>인증번호</p>
+              <input id="certifiednum_input" type="text" placeholder="인증번호" />
             </div>
             <div class="pw_content">
               <p>비밀번호</p>
