장지연_화면수정

--- a/html/home_login.html
+++ b/html/home_login.html
@@ -14,7 +14,7 @@
       </div>
       <div class="nav_mypage">
         <img src="../img/mypage.png" />
-        <a href="#">마이페이지</a>
+        <a href="./mypage.html">마이페이지</a>
       </div>
     </div>
 
@@ -32,9 +32,9 @@
       <div class="right_header">
         <div class="region_name">
           <img src="../img/pin.png" alt="pin" />
-          <a href="#">지역이름</a>
+          <div class="region_choose">지역이름</div>
         </div>
-        <button id="chat_button">채팅하기</button>
+        <a href="./chat.html"> <button id="chat_button">채팅하기</button></a>
       </div>
     </div>
     <div class="wrap_home_content">
@@ -43,10 +43,13 @@
         <p>도움 요청하기</p>
       </a>
 
-      <a href="./solve.html" id="right_rectangle_2">
+      <a href="./request_list.html" id="right_rectangle_2">
         <img src="../img/solve.png" alt="solve" />
         <p>도움 해결하기</p>
       </a>
     </div>
   </body>
+  <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="../js/home_login.js"></script>
 </html>
