--- a/html/request_list.html
+++ b/html/request_list.html
@@ -27,7 +27,7 @@
         </ul>
       </div>
       <div class="nav_chat">
-        <a href="#"><button class="chat_btn">채팅하기</button></a>
+        <a href="./chat.html"><button class="chat_btn">채팅하기</button></a>
       </div>
       <div class="nav_logout">
         <img src="../img/logout.png" alt="" />
@@ -35,7 +35,7 @@
       </div>
       <div class="nav_mypage">
         <img src="../img/mypage.png" alt="" />
-        <a href="#">마이페이지</a>
+        <a href="./mypage.html">마이페이지</a>
       </div>
     </nav>
     <hr />
@@ -44,7 +44,7 @@
         <a href="#" id="request_box">도움 해결하기</a>
         <div class="region_name">
           <img src="../img/pin.png" />
-          <a href="#">지역이름</a>
+          <div class="region_choose">지역이름</div>
         </div>
         <p>*지역이 맞는지 확인해주세요</p>
       </div>
@@ -137,4 +137,7 @@
       </div>
     </div>
   </body>
+  <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="../js/request_list.js"></script>
 </html>
