--- a/html/signup.html
+++ b/html/signup.html
@@ -26,20 +26,27 @@
               <div class="bottom_id_content">
                 <input id="email_input" type="text" placeholder="이메일" />
                 <button id="email_check_button">중복확인</button>
-                
               </div>
               <div class="check_message">
                 <p id="email_check_message">중복 확인이 완료되었습니다. 인증을 완료해주세요.</p>
               </div>
             </div>
+
             <div class="certifiednum_content">
               <p>인증번호</p>
               <input id="certifiednum_input" type="text" placeholder="인증번호" />
+              <button id="certify_button">인증하기</button>
+              <div class="certify_message">
+                <p id="certify_message">인증번호가 확인되었습니다.</p>
+              </div>
             </div>
+
+
             <div class="pw_content">
               <p>비밀번호</p>
               <input id="password_input" type="password" placeholder="비밀번호" />
             </div>
+
             <div class="pw_check_content">
               <p>비밀번호 확인</p>
               <input
@@ -48,10 +55,12 @@
                 placeholder="비밀번호 확인"
               />
             </div>
+
             <div class="name_content">
               <p>이름</p>
               <input id="name_input" type="text" placeholder="이름" />
             </div>
+
             <div class="nickname_content">
               <p>닉네임</p>
               <div class="bottom_nickname_content">
@@ -59,16 +68,19 @@
                 <button>중복확인</button>
               </div>
             </div>
+
             <div class="birth_content">
               <p>생년월일</p>
               <input id="birth_input" type="text" placeholder="(19990807)" />
             </div>
+
             <div class="address_content">
               <p>주소</p>
               <div class="bottom_address_content">
                 <input id="address_input" type="text" placeholder="주소" />
                 <button id="address_input_button" onclick="openAddressPopup()">주소입력</button>
             </div>
+
             <div class="sigup_button">
               <button id="signup_button"><a href="#"></a>회원가입하기</button>
             </div>
