--- a/html/signup.html
+++ b/html/signup.html
@@ -21,62 +21,74 @@
     </div>
     <div class="wrap_signup_content">
         <div class="signup_content">
-            <div class="id_content">
+            <div class="signup_content">
               <p>아이디</p>
-              <div class="bottom_id_content">
+              <div class="bottom_signup_content">
                 <input id="email_input" type="text" placeholder="이메일" />
-                <button id="email_check_button">중복확인</button>
+                <button id="email_check_button" onclick="checkEmailAvailability()">중복확인</button>
               </div>
               <div class="check_message">
                 <p id="email_check_message">중복 확인이 완료되었습니다. 인증을 완료해주세요.</p>
+                <p id="email_duplicate_message">이미 존재하는 아이디입니다</p>
               </div>
             </div>
 
-            <div class="certifiednum_content">
+            <div class="signup_content">
               <p>인증번호</p>
-              <input id="certifiednum_input" type="text" placeholder="인증번호" />
-              <button id="certify_button">인증하기</button>
+              <div class="bottom_signup_content">
+                <input id="certifiednum_input" type="text" placeholder="인증번호" />
+                <button id="certify_button" onclick="showCertifyMessage()">인증하기</button>
+              </div>
               <div class="certify_message">
                 <p id="certify_message">인증번호가 확인되었습니다.</p>
               </div>
             </div>
 
 
-            <div class="pw_content">
+            <div class="signup_content">
               <p>비밀번호</p>
-              <input id="password_input" type="password" placeholder="비밀번호" />
-            </div>
-
-            <div class="pw_check_content">
-              <p>비밀번호 확인</p>
-              <input
-                id="pw_check_input"
-                type="password"
-                placeholder="비밀번호 확인"
+              <input id="password_input" type="text" placeholder="비밀번호" oninput="checkPasswordMatch()"
               />
             </div>
 
-            <div class="name_content">
+            <div class="signup_content">
+              <p>비밀번호 확인</p>
+              <input
+                id="pw_check_input"
+                type="text"
+                placeholder="비밀번호 확인"
+                oninput="checkPasswordMatch()"
+
+              />
+            </div>
+            <div class="pw_message">
+              <p id="pw_message">비밀번호가 일치하지 않습니다</p>
+            </div>
+
+            <div class="signup_content">
               <p>이름</p>
               <input id="name_input" type="text" placeholder="이름" />
             </div>
 
-            <div class="nickname_content">
+            <div class="signup_content">
               <p>닉네임</p>
-              <div class="bottom_nickname_content">
+              <div class="bottom_signup_content">
                 <input id="nickname_input" type="text" placeholder="닉네임" />
                 <button>중복확인</button>
               </div>
+              <div class="nickname_message">
+                <p id="nickname_message">이미 존재하는 닉네임입니다</p>
+              </div>
             </div>
 
-            <div class="birth_content">
+            <div class="signup_content">
               <p>생년월일</p>
               <input id="birth_input" type="text" placeholder="(19990807)" />
             </div>
 
-            <div class="address_content">
+            <div class="signup_content">
               <p>주소</p>
-              <div class="bottom_address_content">
+              <div class="bottom_signup_content">
                 <input id="address_input" type="text" placeholder="주소" />
                 <button id="address_input_button" onclick="openAddressPopup()">주소입력</button>
             </div>
