--- a/html/chat.html
+++ b/html/chat.html
@@ -44,7 +44,7 @@
         </div>
         <div class="nav_mypage">
             <img src="../img/mypage.png" alt="" />
-            <a href="#">마이페이지</a>
+            <a href="../html/mypage.html">마이페이지</a>
         </div>
     </nav>
     <hr />
