--- a/html/my_post.html
+++ b/html/my_post.html
@@ -27,7 +27,7 @@
             </ul>
         </div>
         <div class="nav_chat">
-            <a href="#"><button class="chat_btn">채팅하기</button></a>
+            <a href="../html/chat.html"><button class="chat_btn">채팅하기</button></a>
         </div>
         <div class="nav_logout">
             <img src="../img/logout.png" alt="" />
@@ -35,7 +35,7 @@
         </div>
         <div class="nav_mypage">
             <img src="../img/mypage.png" alt="" />
-            <a href="#">마이페이지</a>
+            <a href="../html/mypage.html">마이페이지</a>
         </div>
     </nav>
     <hr />
